docs: update to GPLv3 license. Minor spelling fixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginAcitivty"
+            android:name=".LoginActivity"
             android:theme="@style/LoginStyle">
         </activity>
         <activity android:name=".AddBookmarkActivity"
