--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'org.eclipse.birt.runtime.3_7_1:org.apache.commons.codec:1.3.0'
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.github.nextcloud:android-library:1.5.0-rc2'
 }
