--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 6
         versionName "1.5"
@@ -29,9 +29,15 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -43,4 +49,10 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.github.nextcloud:android-library:1.5.0-rc2'
+    implementation("com.squareup.okhttp3:okhttp:4.0.0")
+}
+
+configurations.all {
+    // commons-code c
+    exclude group: 'commons-codec', module: 'commons-codec'
 }
